fix: corregir rutas de Reveal.js a ./vendor/ para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TFM - Desarrollo de software asistido por IA</title>
-    <link rel="stylesheet" href="vendor/reveal/dist/reset.css" />
-    <link rel="stylesheet" href="vendor/reveal/dist/reveal.css" />
-    <link rel="stylesheet" href="vendor/reveal/dist/theme/black.css" />
+    <link rel="stylesheet" href="./vendor/reveal/dist/reset.css" />
+    <link rel="stylesheet" href="./vendor/reveal/dist/reveal.css" />
+    <link rel="stylesheet" href="./vendor/reveal/dist/theme/black.css" />
     <link
       rel="stylesheet"
-      href="vendor/reveal/plugin/highlight/monokai.css"
+      href="./vendor/reveal/plugin/highlight/monokai.css"
     />
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="./css/custom.css" />
   </head>
   <body>
     <div class="reveal">
@@ -1671,11 +1671,11 @@
       </div>
     </div>
 
-    <script src="vendor/reveal/dist/reveal.js"></script>
-    <script src="vendor/reveal/plugin/notes/notes.js"></script>
-    <script src="vendor/reveal/plugin/markdown/markdown.js"></script>
-    <script src="vendor/reveal/plugin/highlight/highlight.js"></script>
-    <script src="vendor/reveal/plugin/zoom/zoom.js"></script>
+    <script src="./vendor/reveal/dist/reveal.js"></script>
+    <script src="./vendor/reveal/plugin/notes/notes.js"></script>
+    <script src="./vendor/reveal/plugin/markdown/markdown.js"></script>
+    <script src="./vendor/reveal/plugin/highlight/highlight.js"></script>
+    <script src="./vendor/reveal/plugin/zoom/zoom.js"></script>
     <script>
       Reveal.initialize({
         hash: true,
