--- a/slides/30-slide.html
+++ b/slides/30-slide.html
@@ -1,49 +1,49 @@
 <section
           data-background-gradient="linear-gradient(135deg, #0f3460 0%, #1a1a2e 100%)"
           role="region"
-          aria-label="Siguientes pasos"
+          aria-label="Lecciones aprendidas"
         >
-          <h2>Siguientes Pasos</h2>
+          <h2>Lecciones Aprendidas</h2>
           <p class="slide-explainer">
-            Los siguientes pasos buscan medir impacto real y generalizar la
-            guía. El objetivo es reutilizar el método en otros proyectos.
+            El contexto y las reglas pesan más que el modelo. Velocidad extrema
+            es posible sin sacrificar calidad con proceso disciplinado.
           </p>
           <div class="problem-grid">
             <div class="problem-card fragment">
-              <div class="problem-icon">⏱️</div>
-              <h4>Corto Plazo</h4>
+              <div class="problem-icon">🧭</div>
+              <h4>Fuentes de verdad ANTES</h4>
               <p>
-                Refinar guías de prompt y plantillas. Completar dataset de
-                ejemplos útiles. Normalizar checklist de validación.
+                AGENTS.md + ADRs + OpenAPI previos al código evitaron alucinaciones.
+                La IA fue productiva desde día 1.
               </p>
             </div>
             <div class="problem-card fragment">
-              <div class="problem-icon">📅</div>
-              <h4>Medio Plazo</h4>
+              <div class="problem-icon">🔥</div>
+              <h4>Velocidad extrema con reglas</h4>
               <p>
-                Automatizar evaluación de calidad con métricas. Comparar tiempos
-                con y sin IA. Mejorar visualización de decisiones.
+                Día 5: 8 PRs Onboarding. Día 6: Gantt +2326 LOC. Reglas claras
+                permiten acelerar sin caos.
               </p>
             </div>
             <div class="problem-card fragment">
-              <div class="problem-icon">🎯</div>
-              <h4>Largo Plazo</h4>
+              <div class="problem-icon">🧪</div>
+              <h4>Tests obligatorios siempre</h4>
               <p>
-                Replicar el proceso en otros proyectos. Estudiar impacto en
-                equipos. Publicar guía abierta de buenas prácticas.
+                Tests obligatorios en cada PR. Sin tests, velocidad IA genera
+                deuda técnica insostenible.
               </p>
             </div>
             <div class="problem-card fragment">
-              <div class="problem-icon">🔄</div>
-              <h4>Objetivo final</h4>
+              <div class="problem-icon">🧠</div>
+              <h4>La IA no sustituye criterio</h4>
               <p>
-                Convertir el método en una guía reproducible que otros
-                profesionales puedan seguir para obtener resultados similares.
+                Acelera, pero requiere validación humana continua. Disciplina en
+                docs ↔ código es clave.
               </p>
             </div>
           </div>
           <aside class="notes">
-            Los siguientes pasos se centran en medir mejor el impacto y
-            reutilizar el proceso como guía formativa.
+            La lección clave es que la IA amplifica el proceso existente: si es
+            bueno, acelera; si es malo, empeora resultados.
           </aside>
         </section>
