fix: actualizar métricas a v1.7.0 (1,047 tests, 664 backend, ADR-119, 22/02/2026)

--- a/slides/04-slide.html
+++ b/slides/04-slide.html
@@ -48,10 +48,10 @@
               <div class="problem-icon">✅</div>
               <h4>Estado actual</h4>
               <p>
-                Estado documentado a 14/02/2026: 1,038 tests (655 backend + 383
+                Estado documentado a 22/02/2026: 1,047 tests (664 backend + 383
                 frontend), cobertura global 85.54% y decisiones registradas
-                hasta ADR-107. MFA obligatorio, diseño responsive WCAG AA y
-                evolución continua con releases v1.0.0-v1.3.0 y v1.4.0 en curso.
+                hasta ADR-119. MFA obligatorio, diseño responsive WCAG AA y
+                evolución continua con releases v1.0.0–v1.7.0.
               </p>
             </div>
           </div>
